# MatDNF

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sphinx-reading-durations.json
.github/workflows/: gh-pages.yml
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/mat_dnf/: index.rst.txt
autoapi/: index.html
autoapi/mat_dnf/: index.html
autoapi/mat_dnf/draw/: index.html
autoapi/mat_dnf/jax/: index.html
autoapi/mat_dnf/learner/: index.html
autoapi/mat_dnf/numpy/: index.html
data/E-MTAB-1908/: README.txt  row.attr.txt
docs/source/: conf.py
mat_dnf/: draw.py  learner.py  simplifications.py  utils.py
mat_dnf/jax/: losses.py  models.py  optimizers.py
mat_dnf/numpy/: losses.py  models.py  optimizers.py
matlab/: Mat_DNF.m  README.md  adam_update.m  all_bit_seq.m  eval_DNF.m  gen_DNF.m  logi_conseq.m  logi_equiv.m  readme_for_test.m  simp_DNF.m
matlab/test-generators/: Mat_DNF_deterministic.m  README.md  generate_test_arrays.m  generate_test_arrays.sh  regenerate_test_arrays.m  repeat_Mat_DNF.m  simp_DNF_annotated.m  test_emtab.m
notebooks/: approximation_error.ipynb  readme_for_test.ipynb
tests/: conftest.py  test_jax.py  test_numpy.py  test_utils.py
tests/profiling/: profile.speedscope.json  profile_02.speedscope.json  profile_02_cupy.speedscope.json  profile_02_jax.speedscope.json  profiling.py  profiling.sh  profiling_02.py  profiling_02.sh  profiling_02_cupy.py  profiling_02_cupy.sh  profiling_02_jax.py  profiling_02_jax.sh
(+20 files in other folders)
